code25_all/swift/25677851.txt
var x:Int = (1.234 as Int)

Playground execution failed: 
error: <EXPR>:1:20: error: 
'Double' is not convertible to 
'Int'
var x:Int = (1.234 as Int)
               ^

import UIKit
var x:Int = (1.234 as Int)
import UIKit

var x:Int = (1.234 as Int)

import UIKit
'Double' is not convertible to 'Int'
